--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -873,13 +873,12 @@ steps:
         patch-u: |
           --- b/intro_flutter_gpu/step_09/lib/main.dart
           +++ a/intro_flutter_gpu/step_09/lib/main.dart
-          @@ -95,22 +95,63 @@ class TrianglePainter extends CustomPainter {
+          @@ -95,22 +95,13 @@ class TrianglePainter extends CustomPainter {
            
                final pipeline = gpu.gpuContext.createRenderPipeline(vert, frag);
            
           -    const floatsPerVertex = 4;
-          +    const floatsPerVertex = 6; // 3 for position + 3 for color
-               final vertices = Float32List.fromList([
+          -    final vertices = Float32List.fromList([
           -      // Format: x, y, u, v
           -      -0.8, -0.8, -1.0, -1.0,
           -      0.8, -0.8, 1.0, -1.0,
@@ -887,56 +886,9 @@ steps:
           -      0.8, -0.8, 1.0, -1.0,
           -      0.8, 0.8, 1.0, 1.0,
           -      -0.8, 0.8, -1.0, 1.0,
-          +      // Format: x, y, z, r, g, b
-          +
-          +      // Back Face
-          +      -0.5, -0.5, -0.5, 1.0, 0.0, 0.0,
-          +      0.5, -0.5, -0.5, 0.0, 1.0, 0.0,
-          +      0.5, 0.5, -0.5, 0.0, 0.0, 1.0,
-          +      0.5, 0.5, -0.5, 0.0, 0.0, 1.0,
-          +      -0.5, 0.5, -0.5, 1.0, 1.0, 0.0,
-          +      -0.5, -0.5, -0.5, 1.0, 0.0, 0.0,
-          +
-          +      // Front Face
-          +      -0.5, -0.5, 0.5, 1.0, 0.0, 0.0,
-          +      0.5, 0.5, 0.5, 0.0, 0.0, 1.0,
-          +      0.5, -0.5, 0.5, 0.0, 1.0, 0.0,
-          +      0.5, 0.5, 0.5, 0.0, 0.0, 1.0,
-          +      -0.5, -0.5, 0.5, 1.0, 0.0, 0.0,
-          +      -0.5, 0.5, 0.5, 1.0, 1.0, 0.0,
-          +
-          +      // Left Face
-          +      -0.5, 0.5, 0.5, 1.0, 0.0, 0.0,
-          +      -0.5, -0.5, -0.5, 0.0, 0.0, 1.0,
-          +      -0.5, 0.5, -0.5, 0.0, 1.0, 0.0,
-          +      -0.5, -0.5, -0.5, 0.0, 0.0, 1.0,
-          +      -0.5, 0.5, 0.5, 1.0, 0.0, 0.0,
-          +      -0.5, -0.5, 0.5, 1.0, 1.0, 0.0,
-          +
-          +      // Right Face
-          +      0.5, 0.5, 0.5, 1.0, 0.0, 0.0,
-          +      0.5, 0.5, -0.5, 0.0, 1.0, 0.0,
-          +      0.5, -0.5, -0.5, 0.0, 0.0, 1.0,
-          +      0.5, -0.5, -0.5, 0.0, 0.0, 1.0,
-          +      0.5, -0.5, 0.5, 1.0, 1.0, 0.0,
-          +      0.5, 0.5, 0.5, 1.0, 0.0, 0.0,
-          +
-          +      // Bottom Face
-          +      0.5, -0.5, -0.5, 0.0, 1.0, 0.0,
-          +      -0.5, -0.5, -0.5, 1.0, 0.0, 0.0,
-          +      0.5, -0.5, 0.5, 0.0, 0.0, 1.0,
-          +      -0.5, -0.5, 0.5, 1.0, 1.0, 0.0,
-          +      0.5, -0.5, 0.5, 0.0, 0.0, 1.0,
-          +      -0.5, -0.5, -0.5, 1.0, 0.0, 0.0,
-          +
-          +      // Top Face
-          +      -0.5, 0.5, -0.5, 1.0, 0.0, 0.0,
-          +      0.5, 0.5, -0.5, 0.0, 1.0, 0.0,
-          +      0.5, 0.5, 0.5, 0.0, 0.0, 1.0,
-          +      0.5, 0.5, 0.5, 0.0, 0.0, 1.0,
-          +      -0.5, 0.5, 0.5, 1.0, 1.0, 0.0,
-          +      -0.5, 0.5, -0.5, 1.0, 0.0, 0.0,
-               ]);
+          -    ]);
+          +    const floatsPerVertex = 6;
+          +    final vertices = cubeVertices;
            
                final verticesDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
                  ByteData.sublistView(vertices),
@@ -946,7 +898,7 @@ steps:
                final model = vm.Matrix4.rotationY(angle);
                final view = vm.Matrix4.translation(vm.Vector3(0.0, 0.0, -2.0));
                final projection = vm.makePerspectiveMatrix(
-          @@ -120,7 +161,6 @@ class TrianglePainter extends CustomPainter {
+          @@ -120,7 +111,6 @@ class TrianglePainter extends CustomPainter {
                  100.0,
                );
            
@@ -954,6 +906,49 @@ steps:
                final vertUniforms = [model, view, projection];
            
                final vertUniformsDeviceBuffer = gpu.gpuContext.createDeviceBufferWithCopy(
+          @@ -158,4 +148,42 @@ class TrianglePainter extends CustomPainter {
+           
+             @override
+             bool shouldRepaint(covariant CustomPainter oldDelegate) => true;
+          +
+          +  static const List<List<double>> vertices = [
+          +    // Vertex format: [x, y, z, u, v, w]
+          +
+          +    // Front face of cube
+          +    [-0.5, -0.5, 0.5, 0.0, 0.0, 1.0],
+          +    [0.5, -0.5, 0.5, 1.0, 0.0, 1.0],
+          +    [0.5, 0.5, 0.5, 1.0, 1.0, 1.0],
+          +    [-0.5, 0.5, 0.5, 0.0, 1.0, 1.0],
+          +
+          +    // back face of cube
+          +    [-0.5, -0.5, -0.5, 0.0, 0.0, 0.0],
+          +    [0.5, -0.5, -0.5, 1.0, 0.0, 0.0],
+          +    [0.5, 0.5, -0.5, 1.0, 1.0, 0.0],
+          +    [-0.5, 0.5, -0.5, 0.0, 1.0, 0.0],
+          +  ];
+          +
+          +  // Define indices for triangles (counter-clockwise winding)
+          +  static const indices = [
+          +    // Front face
+          +    0, 2, 1, 0, 3, 2,
+          +    // Back face
+          +    4, 5, 6, 4, 6, 7,
+          +    // Left face
+          +    0, 4, 7, 0, 7, 3,
+          +    // Right face
+          +    1, 2, 6, 1, 6, 5,
+          +    // Bottom face
+          +    0, 1, 5, 0, 5, 4,
+          +    // Top face
+          +    3, 7, 6, 3, 6, 2,
+          +  ];
+          +
+          +  /// Flattened vertex data ready for insertion in graphics buffer.
+          +  /// The vertex format is [r,g,b,u,v,w].
+          +  static final Float32List cubeVertices = Float32List.fromList([
+          +    for (final index in indices) ...vertices[index],
+          +  ]);
+           }
       - name: Patch shaders/simple.frag
         path: intro_flutter_gpu/shaders/simple.frag
         patch-u: |
@@ -1034,16 +1029,7 @@ steps:
         patch-u: |
           --- b/intro_flutter_gpu/step_10/lib/main.dart
           +++ a/intro_flutter_gpu/step_10/lib/main.dart
-          @@ -95,7 +95,7 @@ class TrianglePainter extends CustomPainter {
-           
-               final pipeline = gpu.gpuContext.createRenderPipeline(vert, frag);
-           
-          -    const floatsPerVertex = 6; // 3 for position + 3 for color
-          +    const floatsPerVertex = 6;
-               final vertices = Float32List.fromList([
-                 // Format: x, y, z, r, g, b
-           
-          @@ -171,6 +171,9 @@ class TrianglePainter extends CustomPainter {
+          @@ -121,6 +121,9 @@ class TrianglePainter extends CustomPainter {
            
                renderPass.bindPipeline(pipeline);
            
@@ -1081,7 +1067,7 @@ steps:
              }
            
              @override
-          @@ -152,8 +152,15 @@ class TrianglePainter extends CustomPainter {
+          @@ -102,8 +102,15 @@ class TrianglePainter extends CustomPainter {
                  ByteData.sublistView(vertices),
                );
            
@@ -1099,7 +1085,7 @@ steps:
                final projection = vm.makePerspectiveMatrix(
                  vm.radians(45),
                  size.aspectRatio,
-          @@ -171,7 +178,6 @@ class TrianglePainter extends CustomPainter {
+          @@ -121,7 +128,6 @@ class TrianglePainter extends CustomPainter {
            
                renderPass.bindPipeline(pipeline);
            
@@ -1107,6 +1093,70 @@ steps:
                renderPass.setCullMode(gpu.CullMode.backFace);
            
                final verticesView = gpu.BufferView(
+      - name: Patch shaders/simple.frag
+        path: intro_flutter_gpu/shaders/simple.frag
+        patch-u: |
+          --- b/intro_flutter_gpu/step_11/shaders/simple.frag
+          +++ a/intro_flutter_gpu/step_11/shaders/simple.frag
+          @@ -4,9 +4,32 @@
+           
+           #version 460 core
+           
+          -in vec3 vertex_color;
+          +in vec3 vertex_uvw;
+           out vec4 frag_color;
+           
+          +const vec4 red = vec4(1, 0, 0, 1);
+          +const vec4 green = vec4(0, 1, 0, 1);
+          +const vec4 blue = vec4(0, 0, 1, 1);
+          +const vec4 yellow = vec4(1, 1, 0, 1);
+          +const vec4 orange = vec4(1, 0.5, 0, 1);
+          +const vec4 pink = vec4(1, 0.75, 0.8, 1);
+          +const vec4 purple = vec4(0.5, 0, 0.5, 1);
+          +const vec4 cyan = vec4(0, 1, 1, 1);
+          +
+           void main() { 
+          -  frag_color = vec4(vertex_color, 1.0); 
+          +  // Extract u, v, w coordinates for clarity
+          +  float u = vertex_uvw.x;
+          +  float v = vertex_uvw.y;
+          +  float w = vertex_uvw.z;
+          +
+          +  vec4 bottom_back = mix(red, green, u);
+          +  vec4 bottom_front = mix(purple, pink, u);
+          +
+          +  vec4 top_back = mix(blue, yellow, u);
+          +  vec4 top_front = mix(orange, cyan, u);
+          +
+          +  vec4 back = mix(bottom_back, top_back, v);
+          +  vec4 front = mix(bottom_front, top_front, v);
+          +
+          +  frag_color = mix(back, front, w);
+           }
+      - name: Patch shaders/simple.vert
+        path: intro_flutter_gpu/shaders/simple.vert
+        patch-u: |
+          --- b/intro_flutter_gpu/step_11/shaders/simple.vert
+          +++ a/intro_flutter_gpu/step_11/shaders/simple.vert
+          @@ -5,9 +5,9 @@
+           #version 460 core
+           
+           in vec3 position;
+          -in vec3 color;
+          +in vec3 uvw;
+           
+          -out vec3 vertex_color;
+          +out vec3 vertex_uvw;
+           
+           uniform VertInfo {
+             mat4 model;
+          @@ -17,5 +17,5 @@ uniform VertInfo {
+           
+           void main() {
+             gl_Position = projection * view * model * vec4(position, 1.0);
+          -  vertex_color = color;
+          +  vertex_uvw = uvw;
+           }
       - name: Copy step_11
         copydir:
           from: intro_flutter_gpu
