Simplify `step_12`'s build hook delta

--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -2029,11 +2029,9 @@ steps:
           +import 'package:flutter_scene_importer/build_hooks.dart';
            import 'package:native_assets_cli/native_assets_cli.dart';
            
-          -void main(List<String> args) async {
-          -  await build(args, (config, output) async {
+           void main(List<String> args) async {
+             await build(args, (config, output) async {
           -    await buildShaderBundleJson(
-          +void main(List<String> args) {
-          +  build(args, (config, output) async {
           +    buildModels(
                  buildConfig: config,
           -      buildOutput: output,
