Copy @parlough's changes to other steps

--- a/intro_flutter_gpu/codelab_rebuild.yaml
+++ b/intro_flutter_gpu/codelab_rebuild.yaml
@@ -920,7 +920,7 @@ steps:
           +    [0.5, 0.5, 0.5, 1.0, 1.0, 1.0],
           +    [-0.5, 0.5, 0.5, 0.0, 1.0, 1.0],
           +
-          +    // back face of cube
+          +    // Back face of cube
           +    [-0.5, -0.5, -0.5, 0.0, 0.0, 0.0],
           +    [0.5, -0.5, -0.5, 1.0, 0.0, 0.0],
           +    [0.5, 0.5, -0.5, 1.0, 1.0, 0.0],
@@ -928,7 +928,7 @@ steps:
           +  ];
           +
           +  // Define indices for triangles (counter-clockwise winding)
-          +  static const indices = [
+          +  static const List<int> indices = [
           +    // Front face
           +    0, 2, 1, 0, 3, 2,
           +    // Back face
@@ -944,7 +944,7 @@ steps:
           +  ];
           +
           +  /// Flattened vertex data ready for insertion in graphics buffer.
-          +  /// The vertex format is [x,y,z,u,v,w].
+          +  /// The vertex format is `[x, y, z, u, v, w]`.
           +  static final Float32List cubeVertices = Float32List.fromList([
           +    for (final index in indices) ...vertices[index],
           +  ]);
