--- a/in_app_purchases/step_10/app/pubspec.yaml
+++ b/in_app_purchases/step_10/app/pubspec.yaml
@@ -4,15 +4,15 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.7.0-0
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^5.6.3
+  cloud_firestore: ^5.6.5
   cupertino_icons: ^1.0.8
-  firebase_auth: ^5.4.2
-  firebase_core: ^3.11.0
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
   google_sign_in: ^6.2.2
   http: ^1.3.0
   intl: ^0.20.2
