--- a/in_app_purchases/step_10/dart-backend/pubspec.yaml
+++ b/in_app_purchases/step_10/dart-backend/pubspec.yaml
@@ -4,10 +4,10 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.7.0-0
+  sdk: ^3.7.0
 
 dependencies:
-  app_store_server_sdk: ^1.2.9
+  app_store_server_sdk: ^1.2.10
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
   http: ^1.3.0
