Update backend configuration readme

--- a/in_app_purchases/codelab_rebuild.yaml
+++ b/in_app_purchases/codelab_rebuild.yaml
@@ -16723,16 +16723,16 @@ steps:
         replace-contents: |
           ### Configuration Files
 
-          Create `lib/constants.dart` with:
+          Configure the required IDs and keys in `lib/constants.dart`:
 
           ```
-          const androidPackageId = "your Android package ID";
+          const androidPackageId = 'your Android package ID';
           const appStoreIssuerId = 'App Store Key issuer ID';
-          const appStoreKeyId = 'App Store Keu ID';
-          const appStoreSharedSecret = "App Store shared secret";
+          const appStoreKeyId = 'App Store Key ID';
+          const appStoreSharedSecret = 'App Store shared secret';
           const bundleId = 'your iOS bundle ID';
-          const googleCloudProjectId = "Google Cloud project ID";
-          const googlePlayPubsubBillingTopic = "play_billing"; // change if necessary
+          const googleCloudProjectId = 'Google Cloud project ID';
+          const googlePlayPubsubBillingTopic = 'play_billing'; // change if necessary
           ```
 
           - Add `assets/service-account-firebase.json` with the server key for the Firebase Firestore project.
