--- a/colorist/codelab_rebuild.yaml
+++ b/colorist/codelab_rebuild.yaml
@@ -523,6 +523,122 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_04
+      - name: Add lib/services/gemini_tools.dart
+        path: colorist/lib/services/gemini_tools.dart
+        replace-contents: |
+          // Copyright 2025 The Flutter Authors. All rights reserved.
+          // Use of this source code is governed by a BSD-style license that can be
+          // found in the LICENSE file.
+
+          import 'package:firebase_vertexai/firebase_vertexai.dart';
+          import 'package:flutter_riverpod/flutter_riverpod.dart';
+          import 'package:riverpod_annotation/riverpod_annotation.dart';
+
+          part 'gemini_tools.g.dart';
+
+          class GeminiTools {
+            GeminiTools(this.ref);
+
+            final Ref ref;
+
+            FunctionDeclaration get setColorFuncDecl => FunctionDeclaration(
+              'set_color',
+              'Set the color of the display square based on red, green, and blue values.',
+              parameters: {
+                'red': Schema.number(description: 'Red component value (0.0 - 1.0)'),
+                'green': Schema.number(description: 'Green component value (0.0 - 1.0)'),
+                'blue': Schema.number(description: 'Blue component value (0.0 - 1.0)'),
+              },
+            );
+
+            List<Tool> get tools => [
+              Tool.functionDeclarations([setColorFuncDecl]),
+            ];
+          }
+
+          @riverpod
+          GeminiTools geminiTools(Ref ref) => GeminiTools(ref);
+      - name: Patch lib/providers/gemini.dart
+        path: colorist/lib/providers/gemini.dart
+        patch-u: |
+          --- a/colorist/step_04/lib/providers/gemini.dart
+          +++ b/colorist/step_04/lib/providers/gemini.dart
+          @@ -10,6 +10,7 @@ import 'package:flutter_riverpod/flutter_riverpod.dart';
+           import 'package:riverpod_annotation/riverpod_annotation.dart';
+           
+           import '../firebase_options.dart';
+          +import '../services/gemini_tools.dart';
+           import 'system_prompt.dart';
+           
+           part 'gemini.g.dart';
+          @@ -22,10 +23,12 @@ Future<FirebaseApp> firebaseApp(Ref ref) =>
+           Future<GenerativeModel> geminiModel(Ref ref) async {
+             await ref.watch(firebaseAppProvider.future);
+             final systemPrompt = await ref.watch(systemPromptProvider.future);
+          +  final geminiTools = ref.watch(geminiToolsProvider);
+           
+             final model = FirebaseVertexAI.instance.generativeModel(
+               model: 'gemini-2.0-flash',
+               systemInstruction: Content.system(systemPrompt),
+          +    tools: geminiTools.tools,
+             );
+             return model;
+           }
+      - name: Patch assets/prompts/system_prompt.md
+        path: colorist/assets/prompts/system_prompt.md
+        patch-u: |
+          --- a/colorist/step_04/assets/prompts/system_prompt.md
+          +++ b/colorist/step_04/assets/prompts/system_prompt.md
+          @@ -1,14 +1,12 @@
+           # Colorist System Prompt
+           
+          -You are a color expert assistant integrated into a desktop app called Colorist. Your job is to interpret natural language color descriptions and provide the appropriate RGB values that best represent that description.
+          +You are a color expert assistant integrated into a desktop app called Colorist. Your job is to interpret natural language color descriptions and set the appropriate color values using a specialized tool.
+           
+           ## Your Capabilities
+           
+          -You are knowledgeable about colors, color theory, and how to translate natural language descriptions into specific RGB values. When users describe a color, you should:
+          +You are knowledgeable about colors, color theory, and how to translate natural language descriptions into specific RGB values. You have access to the following tool:
+           
+          -1. Analyze their description to understand the color they're trying to convey
+          -2. Determine the appropriate RGB values (values should be between 0.0 and 1.0)
+          -3. Respond with a conversational explanation and explicitly state the RGB values
+          +**set_color** - Sets the RGB values for the color display based on a description
+           
+           ## How to Respond to User Inputs
+           
+          @@ -16,16 +14,16 @@ When users describe a color:
+           
+           1. First, acknowledge their color description with a brief, friendly response
+           2. Interpret what RGB values would best represent that color description
+          -3. Always include the RGB values clearly in your response, formatted as: `RGB: (red=X.X, green=X.X, blue=X.X)`
+          -4. Provide a brief explanation of your interpretation
+          +3. Use the `set_color` tool to set those values (all values should be between 0.0 and 1.0)
+          +4. After setting the color, provide a brief explanation of your interpretation
+           
+           Example:
+           User: "I want a sunset orange"
+           You: "Sunset orange is a warm, vibrant color that captures the golden-red hues of the setting sun. It combines a strong red component with moderate orange tones.
+           
+          -RGB: (red=1.0, green=0.5, blue=0.25)
+          +[Then you would call the set_color tool with approximately: red=1.0, green=0.5, blue=0.25]
+           
+          -I've selected values with high red, moderate green, and low blue to capture that beautiful sunset glow. This creates a warm orange with a slightly reddish tint, reminiscent of the sun low on the horizon."
+          +After the tool call: "I've set a warm orange with strong red, moderate green, and minimal blue components that is reminiscent of the sun low on the horizon."
+           
+           ## When Descriptions are Unclear
+           
+          @@ -34,7 +32,6 @@ If a color description is ambiguous or unclear, please ask the user clarifying q
+           ## Important Guidelines
+           
+           - Always keep RGB values between 0.0 and 1.0
+          -- Always format RGB values as: `RGB: (red=X.X, green=X.X, blue=X.X)` for easy parsing
+           - Provide thoughtful, knowledgeable responses about colors
+           - When possible, include color psychology, associations, or interesting facts about colors
+           - Be conversational and engaging in your responses
+      - name: Run build_runner
+        path: colorist
+        dart: run build_runner build --delete-conflicting-outputs
       - name: Copy step_04
         copydir:
           from: colorist
@@ -534,6 +650,7 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_05
+
       - name: Copy step_05
         copydir:
           from: colorist
@@ -545,6 +662,7 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_06
+
       - name: Copy step_06
         copydir:
           from: colorist
@@ -556,6 +674,7 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_07
+
       - name: Upgrade deps
         path: colorist
         flutter: pub upgrade --major-versions
