--- a/colorist/codelab_rebuild.yaml
+++ b/colorist/codelab_rebuild.yaml
@@ -196,7 +196,6 @@ steps:
 
           import 'dart:async';
 
-          import 'package:colorist_ui/models/message.dart';
           import 'package:colorist_ui/providers/chat_state_notifier.dart';
           import 'package:colorist_ui/providers/log_state_notifier.dart';
           import 'package:firebase_vertexai/firebase_vertexai.dart';
@@ -218,13 +217,20 @@ steps:
 
               chatStateNotifier.addUserMessage(message);
               logStateNotifier.logUserText(message);
+              final llmMessage = chatStateNotifier.createLlmMessage();
               try {
                 final response = await chatSession.sendMessage(Content.text(message));
                 final responseText = response.text?.trim() ?? 'No text response received';
                 logStateNotifier.logLlmText(responseText);
-                chatStateNotifier.addLlmMessage(responseText, MessageState.complete);
+                chatStateNotifier.appendToMessage(llmMessage.id, responseText);
               } catch (e, st) {
                 logStateNotifier.logError(e, st: st);
+                chatStateNotifier.appendToMessage(
+                  llmMessage.id,
+                  "\nI'm sorry, I encountered an error processing your request. Please try again.",
+                );
+              } finally {
+                chatStateNotifier.finalizeMessage(llmMessage.id);
               }
             }
           }
@@ -654,7 +660,7 @@ steps:
         patch-u: |
           --- b/colorist/step_05/lib/services/gemini_chat_service.dart
           +++ a/colorist/step_05/lib/services/gemini_chat_service.dart
-          @@ -12,6 +12,7 @@ import 'package:flutter_riverpod/flutter_riverpod.dart';
+          @@ -11,6 +11,7 @@ import 'package:flutter_riverpod/flutter_riverpod.dart';
            import 'package:riverpod_annotation/riverpod_annotation.dart';
            
            import '../providers/gemini.dart';
@@ -665,7 +671,7 @@ steps:
           @@ -31,6 +32,13 @@ class GeminiChatService {
                  final responseText = response.text?.trim() ?? 'No text response received';
                  logStateNotifier.logLlmText(responseText);
-                 chatStateNotifier.addLlmMessage(responseText, MessageState.complete);
+                 chatStateNotifier.appendToMessage(llmMessage.id, responseText);
           +
           +      if (response.functionCalls.isNotEmpty) {
           +        final geminiTools = ref.read(geminiToolsProvider);
@@ -675,7 +681,7 @@ steps:
           +      }
                } catch (e, st) {
                  logStateNotifier.logError(e, st: st);
-               }
+                 chatStateNotifier.appendToMessage(
       - name: Patch lib/services/gemini_tools.dart
         path: colorist/lib/services/gemini_tools.dart
         patch-u: |
@@ -750,7 +756,117 @@ steps:
     steps:
       - name: Remove generated code
         rmdir: step_06
-
+      - name: Patch lib/services/gemini_chat_service.dart
+        path: colorist/lib/services/gemini_chat_service.dart
+        patch-u: |
+          --- b/colorist/step_06/lib/services/gemini_chat_service.dart
+          +++ a/colorist/step_06/lib/services/gemini_chat_service.dart
+          @@ -4,6 +4,7 @@
+           
+           import 'dart:async';
+           
+          +import 'package:colorist_ui/models/conversation_state.dart';
+           import 'package:colorist_ui/providers/chat_state_notifier.dart';
+           import 'package:colorist_ui/providers/log_state_notifier.dart';
+           import 'package:firebase_vertexai/firebase_vertexai.dart';
+          @@ -15,29 +16,41 @@ import 'gemini_tools.dart';
+           
+           part 'gemini_chat_service.g.dart';
+           
+          +final conversationStateProvider = StateProvider(
+          +  (ref) => ConversationState.idle,
+          +);
+          +
+           class GeminiChatService {
+             GeminiChatService(this.ref);
+             final Ref ref;
+           
+             Future<void> sendMessage(String message) async {
+               final chatSession = await ref.read(chatSessionProvider.future);
+          +    final conversationState = ref.read(conversationStateProvider);
+               final chatStateNotifier = ref.read(chatStateNotifierProvider.notifier);
+               final logStateNotifier = ref.read(logStateNotifierProvider.notifier);
+           
+          +    if (conversationState == ConversationState.busy) {
+          +      logStateNotifier.logWarning(
+          +        "Can't send a message while a conversation is in progress",
+          +      );
+          +      throw Exception(
+          +        "Can't send a message while a conversation is in progress",
+          +      );
+          +    }
+          +    final conversationStateNotifier = ref.read(
+          +      conversationStateProvider.notifier,
+          +    );
+          +    conversationStateNotifier.state = ConversationState.busy;
+               chatStateNotifier.addUserMessage(message);
+               logStateNotifier.logUserText(message);
+               final llmMessage = chatStateNotifier.createLlmMessage();
+               try {
+          -      final response = await chatSession.sendMessage(Content.text(message));
+          -      final responseText = response.text?.trim() ?? 'No text response received';
+          -      logStateNotifier.logLlmText(responseText);
+          -      chatStateNotifier.appendToMessage(llmMessage.id, responseText);
+          -
+          -      if (response.functionCalls.isNotEmpty) {
+          -        final geminiTools = ref.read(geminiToolsProvider);
+          -        for (final functionCall in response.functionCalls) {
+          -          geminiTools.handleFunctionCall(functionCall.name, functionCall.args);
+          -        }
+          +      final responseStream = chatSession.sendMessageStream(
+          +        Content.text(message),
+          +      );
+          +      await for (final block in responseStream) {
+          +        _processBlock(block, llmMessage.id);
+                 }
+               } catch (e, st) {
+                 logStateNotifier.logError(e, st: st);
+          @@ -47,6 +60,24 @@ class GeminiChatService {
+                 );
+               } finally {
+                 chatStateNotifier.finalizeMessage(llmMessage.id);
+          +      conversationStateNotifier.state = ConversationState.idle;
+          +    }
+          +  }
+          +
+          +  void _processBlock(GenerateContentResponse block, String llmMessageId) {
+          +    var blockText = block.text;
+          +    if (blockText != null) {
+          +      final chatStateNotifier = ref.read(chatStateNotifierProvider.notifier);
+          +      final logStateNotifier = ref.read(logStateNotifierProvider.notifier);
+          +      logStateNotifier.logLlmText(blockText);
+          +      chatStateNotifier.appendToMessage(llmMessageId, blockText);
+          +    }
+          +
+          +    if (block.functionCalls.isNotEmpty) {
+          +      final geminiTools = ref.read(geminiToolsProvider);
+          +      for (final functionCall in block.functionCalls) {
+          +        geminiTools.handleFunctionCall(functionCall.name, functionCall.args);
+          +      }
+               }
+             }
+           }
+      - name: Patch lib/main.dart
+        path: colorist/lib/main.dart
+        patch-u: |
+          --- b/colorist/step_06/lib/main.dart
+          +++ a/colorist/step_06/lib/main.dart
+          @@ -33,6 +33,7 @@ class MainApp extends ConsumerWidget {
+             @override
+             Widget build(BuildContext context, WidgetRef ref) {
+               final model = ref.watch(geminiModelProvider);
+          +    final conversationState = ref.watch(conversationStateProvider);
+           
+               return MaterialApp(
+                 theme: ThemeData(
+          @@ -41,6 +42,7 @@ class MainApp extends ConsumerWidget {
+                 home: model.when(
+                   data:
+                       (data) => MainScreen(
+          +              conversationState: conversationState,
+                         sendMessage: (text) {
+                           ref.read(geminiChatServiceProvider).sendMessage(text);
+                         },
       - name: Run build_runner
         path: colorist
         dart: run build_runner build --delete-conflicting-outputs
