--- a/colorist/codelab_rebuild.yaml
+++ b/colorist/codelab_rebuild.yaml
@@ -8,7 +8,7 @@ steps:
         flutter: create -e colorist --platforms=android,ios,macos,web,windows
       - name: Add dependencies
         path: colorist
-        flutter: pub add colorist_ui flutter_riverpod logging riverpod_annotation dev:build_runner dev:riverpod_generator dev:riverpod_lint dev:json_serializable
+        flutter: pub add colorist_ui flutter_riverpod logging riverpod_annotation dev:build_runner dev:riverpod_generator dev:riverpod_lint dev:json_serializable dev:custom_lint
       - name: Strip DEVELOPMENT_TEAM
         strip-lines-containing: DEVELOPMENT_TEAM =
         path: colorist/ios/Runner.xcodeproj/project.pbxproj
@@ -16,6 +16,10 @@ steps:
         path: colorist/analysis_options.yaml
         replace-contents: |
           include: ../../analysis_options.yaml
+
+          analyzer:
+            plugins:
+              - custom_lint
       - name: dart fix
         path: colorist
         dart: fix --apply
@@ -248,7 +252,7 @@ steps:
           @@ -2,15 +2,17 @@
            // Use of this source code is governed by a BSD-style license that can be
            // found in the LICENSE file.
-           
+
           -import 'package:colorist_ui/models/message.dart';
           -import 'package:colorist_ui/providers/chat_state_notifier.dart';
           -import 'package:colorist_ui/providers/log_state_notifier.dart';
@@ -259,7 +263,7 @@ steps:
            import 'package:flutter/material.dart';
            import 'package:flutter_riverpod/flutter_riverpod.dart';
            import 'package:logging/logging.dart';
-           
+
           +import 'providers/gemini.dart';
           +import 'services/gemini_chat_service.dart';
           +
@@ -267,7 +271,7 @@ steps:
              Logger.root.level = Level.ALL;
              Logger.root.onRecord.listen((record) {
           @@ -30,26 +32,22 @@ class MainApp extends ConsumerWidget {
-           
+
              @override
              Widget build(BuildContext context, WidgetRef ref) {
           +    final model = ref.watch(geminiModelProvider);
@@ -341,7 +345,7 @@ steps:
                compileSdk = flutter.compileSdkVersion
           -    ndkVersion = flutter.ndkVersion
           +    ndkVersion = "27.0.12077973"
-           
+
                compileOptions {
                    sourceCompatibility = JavaVersion.VERSION_11
           @@ -24,7 +24,7 @@ android {
@@ -463,10 +467,10 @@ steps:
       - name: Patch pubspec.yaml
         path: colorist/pubspec.yaml
         patch-u: |
-          --- a/colorist/step_03/pubspec.yaml
-          +++ b/colorist/step_03/pubspec.yaml
-          @@ -27,3 +27,7 @@ dev_dependencies:
-           
+          --- b/colorist/step_03/pubspec.yaml
+          +++ a/colorist/step_03/pubspec.yaml
+          @@ -28,3 +28,7 @@ dev_dependencies:
+          
            flutter:
              uses-material-design: true
           +
@@ -496,18 +500,18 @@ steps:
           +++ b/colorist/step_03/lib/providers/gemini.dart
           @@ -10,6 +10,7 @@ import 'package:flutter_riverpod/flutter_riverpod.dart';
            import 'package:riverpod_annotation/riverpod_annotation.dart';
-           
+
            import '../firebase_options.dart';
           +import 'system_prompt.dart';
-           
+
            part 'gemini.g.dart';
-           
+
           @@ -20,9 +21,11 @@ Future<FirebaseApp> firebaseApp(Ref ref) =>
            @riverpod
            Future<GenerativeModel> geminiModel(Ref ref) async {
              await ref.watch(firebaseAppProvider.future);
           +  final systemPrompt = await ref.watch(systemPromptProvider.future);
-           
+
              final model = FirebaseVertexAI.instance.generativeModel(
                model: 'gemini-2.0-flash',
           +    systemInstruction: Content.system(systemPrompt),
@@ -570,18 +574,18 @@ steps:
           +++ b/colorist/step_04/lib/providers/gemini.dart
           @@ -10,6 +10,7 @@ import 'package:flutter_riverpod/flutter_riverpod.dart';
            import 'package:riverpod_annotation/riverpod_annotation.dart';
-           
+
            import '../firebase_options.dart';
           +import '../services/gemini_tools.dart';
            import 'system_prompt.dart';
-           
+
            part 'gemini.g.dart';
           @@ -22,10 +23,12 @@ Future<FirebaseApp> firebaseApp(Ref ref) =>
            Future<GenerativeModel> geminiModel(Ref ref) async {
              await ref.watch(firebaseAppProvider.future);
              final systemPrompt = await ref.watch(systemPromptProvider.future);
           +  final geminiTools = ref.watch(geminiToolsProvider);
-           
+
              final model = FirebaseVertexAI.instance.generativeModel(
                model: 'gemini-2.0-flash',
                systemInstruction: Content.system(systemPrompt),
@@ -596,46 +600,46 @@ steps:
           +++ b/colorist/step_04/assets/prompts/system_prompt.md
           @@ -1,14 +1,12 @@
            # Colorist System Prompt
-           
+
           -You are a color expert assistant integrated into a desktop app called Colorist. Your job is to interpret natural language color descriptions and provide the appropriate RGB values that best represent that description.
           +You are a color expert assistant integrated into a desktop app called Colorist. Your job is to interpret natural language color descriptions and set the appropriate color values using a specialized tool.
-           
+
            ## Your Capabilities
-           
+
           -You are knowledgeable about colors, color theory, and how to translate natural language descriptions into specific RGB values. When users describe a color, you should:
           +You are knowledgeable about colors, color theory, and how to translate natural language descriptions into specific RGB values. You have access to the following tool:
-           
+
           -1. Analyze their description to understand the color they're trying to convey
           -2. Determine the appropriate RGB values (values should be between 0.0 and 1.0)
           -3. Respond with a conversational explanation and explicitly state the RGB values
           +**set_color** - Sets the RGB values for the color display based on a description
-           
+
            ## How to Respond to User Inputs
-           
+
           @@ -16,16 +14,16 @@ When users describe a color:
-           
+
            1. First, acknowledge their color description with a brief, friendly response
            2. Interpret what RGB values would best represent that color description
           -3. Always include the RGB values clearly in your response, formatted as: `RGB: (red=X.X, green=X.X, blue=X.X)`
           -4. Provide a brief explanation of your interpretation
           +3. Use the `set_color` tool to set those values (all values should be between 0.0 and 1.0)
           +4. After setting the color, provide a brief explanation of your interpretation
-           
+
            Example:
            User: "I want a sunset orange"
            You: "Sunset orange is a warm, vibrant color that captures the golden-red hues of the setting sun. It combines a strong red component with moderate orange tones.
-           
+
           -RGB: (red=1.0, green=0.5, blue=0.25)
           +[Then you would call the set_color tool with approximately: red=1.0, green=0.5, blue=0.25]
-           
+
           -I've selected values with high red, moderate green, and low blue to capture that beautiful sunset glow. This creates a warm orange with a slightly reddish tint, reminiscent of the sun low on the horizon."
           +After the tool call: "I've set a warm orange with strong red, moderate green, and minimal blue components that is reminiscent of the sun low on the horizon."
-           
+
            ## When Descriptions are Unclear
-           
+
           @@ -34,7 +32,6 @@ If a color description is ambiguous or unclear, please ask the user clarifying q
            ## Important Guidelines
-           
+
            - Always keep RGB values between 0.0 and 1.0
           -- Always format RGB values as: `RGB: (red=X.X, green=X.X, blue=X.X)` for easy parsing
            - Provide thoughtful, knowledgeable responses about colors
@@ -662,12 +666,12 @@ steps:
           +++ a/colorist/step_05/lib/services/gemini_chat_service.dart
           @@ -11,6 +11,7 @@ import 'package:flutter_riverpod/flutter_riverpod.dart';
            import 'package:riverpod_annotation/riverpod_annotation.dart';
-           
+
            import '../providers/gemini.dart';
           +import 'gemini_tools.dart';
-           
+
            part 'gemini_chat_service.g.dart';
-           
+
           @@ -31,6 +32,13 @@ class GeminiChatService {
                  final responseText = response.text?.trim() ?? 'No text response received';
                  logStateNotifier.logLlmText(responseText);
@@ -690,7 +694,7 @@ steps:
           @@ -2,6 +2,8 @@
            // Use of this source code is governed by a BSD-style license that can be
            // found in the LICENSE file.
-           
+
           +import 'package:colorist_ui/providers/color_state_notifier.dart';
           +import 'package:colorist_ui/providers/log_state_notifier.dart';
            import 'package:firebase_vertexai/firebase_vertexai.dart';
@@ -740,7 +744,7 @@ steps:
           +    };
           +  }
            }
-           
+
            @riverpod
       - name: Run build_runner
         path: colorist
@@ -762,17 +766,17 @@ steps:
           --- b/colorist/step_06/lib/services/gemini_chat_service.dart
           +++ a/colorist/step_06/lib/services/gemini_chat_service.dart
           @@ -4,6 +4,7 @@
-           
+
            import 'dart:async';
-           
+
           +import 'package:colorist_ui/models/conversation_state.dart';
            import 'package:colorist_ui/providers/chat_state_notifier.dart';
            import 'package:colorist_ui/providers/log_state_notifier.dart';
            import 'package:firebase_vertexai/firebase_vertexai.dart';
           @@ -15,29 +16,41 @@ import 'gemini_tools.dart';
-           
+
            part 'gemini_chat_service.g.dart';
-           
+
           +final conversationStateProvider = StateProvider(
           +  (ref) => ConversationState.idle,
           +);
@@ -780,13 +784,13 @@ steps:
            class GeminiChatService {
              GeminiChatService(this.ref);
              final Ref ref;
-           
+
              Future<void> sendMessage(String message) async {
                final chatSession = await ref.read(chatSessionProvider.future);
           +    final conversationState = ref.read(conversationStateProvider);
                final chatStateNotifier = ref.read(chatStateNotifierProvider.notifier);
                final logStateNotifier = ref.read(logStateNotifierProvider.notifier);
-           
+
           +    if (conversationState == ConversationState.busy) {
           +      logStateNotifier.logWarning(
           +        "Can't send a message while a conversation is in progress",
@@ -856,7 +860,7 @@ steps:
              Widget build(BuildContext context, WidgetRef ref) {
                final model = ref.watch(geminiModelProvider);
           +    final conversationState = ref.watch(conversationStateProvider);
-           
+
                return MaterialApp(
                  theme: ThemeData(
           @@ -41,6 +42,7 @@ class MainApp extends ConsumerWidget {
@@ -888,10 +892,10 @@ steps:
           +++ a/colorist/step_07/lib/services/gemini_chat_service.dart
           @@ -3,7 +3,9 @@
            // found in the LICENSE file.
-           
+
            import 'dart:async';
           +import 'dart:convert';
-           
+
           +import 'package:colorist_ui/models/color_data.dart';
            import 'package:colorist_ui/models/conversation_state.dart';
            import 'package:colorist_ui/providers/chat_state_notifier.dart';
@@ -899,7 +903,7 @@ steps:
           @@ -24,6 +26,10 @@ class GeminiChatService {
              GeminiChatService(this.ref);
              final Ref ref;
-           
+
           +  Future<void> notifyColorSelection(ColorData color) => sendMessage(
           +    'User selected color from history: ${json.encode(color.toLLMContextMap())}',
           +  );
@@ -928,9 +932,9 @@ steps:
           --- b/colorist/step_07/assets/prompts/system_prompt.md
           +++ a/colorist/step_07/assets/prompts/system_prompt.md
           @@ -29,6 +29,14 @@ After the tool call: "I've set a warm orange with strong red, moderate green, an
-           
+
            If a color description is ambiguous or unclear, please ask the user clarifying questions, one at a time.
-           
+
           +## When Users Select Historical Colors
           +
           +Sometimes, the user will manually select a color from the history panel. When this happens, you'll receive a notification about this selection that includes details about the color. Acknowledge this selection with a brief response that recognizes what they've done and comments on the selected color.
@@ -940,7 +944,7 @@ steps:
           +You: "I see you've selected an ocean blue from your history. This tranquil blue with a moderate intensity has a calming, professional quality to it. Would you like to explore similar shades or create a contrasting color?"
           +
            ## Important Guidelines
-           
+
            - Always keep RGB values between 0.0 and 1.0
       - name: Run build_runner
         path: colorist
