--- a/colorist/step_06/pubspec.yaml
+++ b/colorist/step_06/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   riverpod_generator: ^2.6.5
   riverpod_lint: ^2.6.5
   json_serializable: ^6.9.4
+  custom_lint: ^0.7.5
 
 flutter:
   uses-material-design: true
